--- a/.github/workflows/Job1&2.yml
+++ b/.github/workflows/Job1&2.yml
@@ -2,15 +2,15 @@ name: Combined Job
 on:
  workflow_dispatch:
    inputs:
-     configuration:
+     Configuration:
        description: 'Configuration'
        required: true
        default: 'Hello'
-     configCode:
+     ConfigCode:
        description: 'ConfigCode'
        required: false
        default: '10'
-     configType:
+     ConfigType:
        description: 'ConfigType'
        required: true
        default: 'Prod'
@@ -30,9 +30,9 @@ jobs:
    - name: Prepare Configuration
      id: config
      run: |
-       if [[ -n "$INPUT_configCode" ]]; then
-         formattedConfig="$INPUT_configuration, $INPUT_configCode, $INPUT_configType"
+       if [[ -n "$ConfigCode" ]] then
+         formattedConfig="$Configuration, $ConfigCode, $ConfigType"
        else
-         formattedConfig="$INPUT_configuration, $INPUT_configType"
+         formattedConfig="$Configuration, $ConfigType"
        fi
        echo "Formatted Configuration: $formattedConfig"
