--- a/.github/workflows/Job1&2.yml
+++ b/.github/workflows/Job1&2.yml
@@ -28,9 +28,9 @@ jobs:
    
    - name: Prepare Configuration
      run: |
-       formattedConfig="${{ inputs.configuration }} - "
+       formattedConfig="${{ inputs.configuration }} , "
        if [[ -n "${{ inputs.configCode }}" ]]; then
-       formattedConfig= $formattedConfig , " ${{ inputs.configCode }} ,"
+       formattedConfig= "$formattedConfig${{ inputs.configCode }} ,"
        fi
-       formattedConfig= $formattedConfig , ${{ inputs.configType }}
-       echo "Formatted Configuration: \"$formattedConfig\""
+       formattedConfig= "$formattedConfig${{ inputs.configType }}"
+       echo "Formatted Configuration: $formattedConfig"
