--- a/.github/workflows/Job1&2.yml
+++ b/.github/workflows/Job1&2.yml
@@ -30,9 +30,9 @@ jobs:
      run: |
        formattedConfig="${{ inputs.configuration }} , "
        if [[ -n "${{ inputs.configCode }}" ]]; then
-       formattedConfig= "$formattedConfig${{ inputs.configCode }} ,"
-       else 
-       formattedConfig= "$formattedConfig"
+       formattedConfig= $formattedConfig"${{ inputs.configCode }} ,"
+       else
+       formattedConfig= $formattedConfig
        fi
-       formattedConfig= "$formattedConfig${{ inputs.configType }}"
+       formattedConfig= $formattedConfig"${{ inputs.configType }}"
        echo "Formatted Configuration: $formattedConfig"
