--- a/.github/workflows/job1failure.yml
+++ b/.github/workflows/job1failure.yml
@@ -25,7 +25,7 @@ jobs:
 
    steps:
    - name: Print Hello World
-     run: echo "Hello World"
+     run: ech "Hello World"
  Configure: 
    needs: Print
    runs-on: ubuntu-latest
