--- a/.github/workflows/job1failure.yml
+++ b/.github/workflows/job1failure.yml
@@ -27,6 +27,7 @@ jobs:
    - name: Print Hello World
      run: exit 1
  Configure: 
+   needs: Print
    runs-on: ubuntu-latest
    if: ${{ needs.Print.result != 'success' }}
    steps:
