--- a/.github/workflows/SequentialJob.yml
+++ b/.github/workflows/SequentialJob.yml
@@ -1,24 +1,7 @@
 name: Combined Job pass/fail
 on:
  workflow_dispatch:
-   inputs:
-     Configuration:
-       description: 'Configuration'
-       required: true
-       default: 'Hello'
-     ConfigCode:
-       description: 'ConfigCode'
-       required: false
-       default: '10'
-     ConfigType:
-       description: 'ConfigType'
-       required: true
-       default: 'Prod'
-       options:
-         - 'Staging'
-         - 'Prod'
-         - 'QA'
-
+   
 jobs:
  Print:
    runs-on: ubuntu-latest
@@ -29,14 +12,7 @@ jobs:
  Configure: 
    needs: Print
    runs-on: ubuntu-latest
-   
+   if: ${{ always() }}
    steps:
    - name: Prepare Configuration
-     if: ${{ always() }}
-     run: |
-       if [[ -n "${{inputs.ConfigCode}}" ]]; then
-         formattedConfig="${{inputs.Configuration}} - ${{inputs.ConfigCode}} - ${{inputs.ConfigType}}"
-       else
-         formattedConfig="${{inputs.Configuration}} - ${{inputs.ConfigType}}"
-       fi
-       echo "Formatted Configuration: $formattedConfig"
+     run: echo "Job 2 executed weather job 1 fails or succeed."
