--- a/.github/workflows/jobCancelled.yml
+++ b/.github/workflows/jobCancelled.yml
@@ -1,41 +1,19 @@
 name: Combined Job cancelled
 on:
  workflow_dispatch:
-   inputs:
-     Configuration:
-       description: 'Configuration'
-       required: true
-       default: 'Hello'
-     ConfigCode:
-       description: 'ConfigCode'
-       required: false
-       default: '10'
-     ConfigType:
-       description: 'ConfigType'
-       required: true
-       default: 'Prod'
-       options:
-         - 'Staging'
-         - 'Prod'
-         - 'QA'
-
+ 
 jobs:
  Print:
-   runs-on: ubuntu-latest
-
+   runs-on: ubuntu-latest 
    steps:
    - name: Print Hello World
-     run: exit 1
- Configure: 
-   needs: Print
-   runs-on: ubuntu-latest
-   if: ${{ cancelled() }}
-   steps:
-   - name: Prepare Configuration
      run: |
-       if [[ -n "${{inputs.ConfigCode}}" ]]; then
-         formattedConfig="${{inputs.Configuration}} - ${{inputs.ConfigCode}} - ${{inputs.ConfigType}}"
-       else
-         formattedConfig="${{inputs.Configuration}} - ${{inputs.ConfigType}}"
-       fi
-       echo "Formatted Configuration: $formattedConfig"
+          echo "This is Job 1"
+          exit 1
+ Configure:
+      needs: Print
+      runs-on: ubuntu-latest
+      if: ${{ cancelled() }}
+      steps:
+      - name: Prepare Configuration
+        run: echo "JOB 2 when workflow is cancelled."
