--- a/.github/workflows/jobCancelled.yml
+++ b/.github/workflows/jobCancelled.yml
@@ -1,7 +1,10 @@
 name: Combined Job cancelled
 on:
- workflow_dispatch:
- 
+ workflow_run:
+  workflows: ["jobCancelled"]
+  types:
+   - workflow_run
+   
 jobs:
  Print:
    runs-on: ubuntu-latest 
