--- a/.github/workflows/workflowCancel.yml
+++ b/.github/workflows/workflowCancel.yml
@@ -16,8 +16,8 @@ jobs:
  job2:
    needs: job1
    runs-on: ubuntu-latest
-   if: ${{ github.event.inputs.cancel == 'true' }}
+   
    steps:
      - name: Job 2
-       if: ${{ github.event.inputs.cancel == 'true' }}
+       if: ${{ github.event.workflow_run.conclusion == 'success' }}
        run: echo "Job 2 executed when the workflow is canceled"
