--- a/.github/workflows/workflowCancel.yml
+++ b/.github/workflows/workflowCancel.yml
@@ -10,11 +10,10 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: Job 1
-       run: |
-         echo "This is Job 1"
+       if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+       run: echo "This is Job 1"
 
  job2:
-   needs: job1
    runs-on: ubuntu-latest
    
    steps:
