--- a/.github/workflows/workflowCancel.yml
+++ b/.github/workflows/workflowCancel.yml
@@ -11,7 +11,9 @@ jobs:
    steps:
      - name: Job 1
        if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-       run: echo "This is Job 1"
+       run: |
+            echo "This is Job 1"
+            exit 1
 
  job2:
    needs: job1
