--- a/.github/workflows/Reusable_workflow.yml
+++ b/.github/workflows/Reusable_workflow.yml
@@ -12,17 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
     steps:
      - name: set Output1
        id: step1
        run: |
         if: ${{ input.config-path }} == true; then
         echo "::set-output name=test:: Hello World True"
-        
-     - name: set Output2
-       id: step2
-       run: |
-        if: ${{ input.config-path }} == false; then
+        else
         echo "::set-output name=test:: Hello World False"
         
