--- a/.github/workflows/Call_Reusableworkflow.yml
+++ b/.github/workflows/Call_Reusableworkflow.yml
@@ -3,15 +3,18 @@ name: Call Reusable workflow
 on: 
   workflow_dispatch:
     inputs:
-      config-path:
+      configuration:
          description: 'Configuration'
          required: true
+         default: 'true'
+         
 jobs:
    call_reusable:
+     uses: ./.github/workflows/Reusable_workflow.yml
+     with:
+         configuration: ${{ github.event.inputs.configuration }}
+   job2:
      runs-on: ubuntu-latest
+     needs: call_reusable
      steps:
-      - name: Caller
-        uses: ./.github/workflows/Reusable_workflow.yml
-        with:
-         config-path: ${{ github.event.inputs.config-path }}
-    
+      - run: echo ${{ needs.job1.outputs.firstword }}
