--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   job1:
-    uses: ./.github/workflows/test1.yml@v1
+    uses: ./.github/workflows/test1.yml
 
   job2:
     runs-on: ubuntu-latest
