--- a/.github/workflows/Call_Reusableworkflow.yml
+++ b/.github/workflows/Call_Reusableworkflow.yml
@@ -11,10 +11,10 @@ jobs:
    call_reusable:
      uses: ./.github/workflows/Reusable_workflow.yml
      with:
-         configuration: ${{ github.event.inputs.configuration }}
+         configuration: ${{ inputs.configuration }}
      
    job2:
     runs-on: ubuntu-latest
     needs: call_reusable
     steps:
-      - run: echo ${{ needs.job1.outputs.firstword }}
+      - run: echo ${{ needs.call_reusable.outputs.firstword }}
