--- a/.github/workflows/Reusableworkflow_Call.yml
+++ b/.github/workflows/Reusableworkflow_Call.yml
@@ -17,4 +17,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: call_reusable
     steps:
-      - run: echo ${{ needs.call_reusable.outputs.firstword }}
+      - run: echo "${{ needs.call_reusable.outputs.firstword }}"
