--- a/.github/workflows/Reusableworkflow_Call.yml
+++ b/.github/workflows/Reusableworkflow_Call.yml
@@ -9,9 +9,11 @@ on:
          
 jobs:
    call_reusable:
-     runs-on: ubuntu-latest
-     steps: |
-      - uses: ./.github/workflows/Reusable_workflow.yml
+        uses: ./.github/workflows/Reusable_workflow.yml
         with:
             configuration: ${{ inputs.configuration }}
-        run: echo "${{ needs.call_reusable.outputs.firstword }}"
+   job2:
+    runs-on: ubuntu-latest
+    needs: call_reusable
+    steps:
+      - run: echo ${{ needs.call_reusable.outputs.firstword }}
