--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -1,26 +1,22 @@
-name: Reusable workflow
-
+name: Reusable Workflow
 on:
-  workflow_call:
-    # Map the workflow outputs to job outputs
-    outputs:
-      firstword:
-        description: "The first output string"
-        value: ${{ jobs.example_job.outputs.output1 }}
-      secondword:
-        description: "The second output string"
-        value: ${{ jobs.example_job.outputs.output2 }}
-
+ workflow_call:
+   inputs:
+     configuration:
+       type: string
+       description: 'Configuration'
+       required: true
 jobs:
-  example_job:
-    name: Generate output
-    runs-on: ubuntu-latest
-    # Map the job outputs to step outputs
-    outputs:
-      output1: ${{ steps.step1.outputs.firstword }}
-      output2: ${{ steps.step2.outputs.secondword }}
-    steps:
-      - id: step1
-        run: echo "firstword=hello" >> $GITHUB_OUTPUT
-      - id: step2
-        run: echo "secondword=world" >> $GITHUB_OUTPUT
+ display_output:
+   runs-on: ubuntu-latest
+   outputs:
+     hello_output: ${{ steps.display.outputs.hello_output }}
+   steps:
+     - name: Display Output
+       id: display
+       run: |
+         if ${{ inputs.configuration }} == 'true'; then
+           echo "::set-output name=hello_output::Hello World true"
+         else
+           echo "::set-output name=hello_output::Hello World false"
+         fi
