--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -9,7 +9,7 @@ on:
 jobs:
  deployment:
     runs-on: ubuntu-latest
-    #environment: production
+    environment: production
     steps:
      - name: EnvironmentSetup
        run: |
