--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -19,5 +19,5 @@ jobs:
            echo "No environment set"
            echo "MY_ENVIRONMENT=" >> $GITHUB_ENV
          fi
-    environment: $MY_ENVIRONMENT
+    environment: ${{MY_ENVIRONMENT}}
      
